tdf#114802 Emojis palette inserts code instead of emoji

regression from

    commit 027b25ecd54ac97ea2471ca73e3ba89ce052fe76
    use comphelper::InitPropertySequence in more places

Change-Id: I587242427c00ebf1faf44ad6b12090a39a1a3ef7
Reviewed-on: https://gerrit.libreoffice.org/47705
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Xisco Faulí <xiscofauli@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>